fixed image sizing issues on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -141,7 +141,7 @@ body {
   list-style: none;
 }
 
-#bio-pic {
+#bio-pic, #gallery-img {
   width: 450px;
   height: auto;
 }
@@ -244,7 +244,7 @@ body {
   .footer {
     display: none;
   }
-  #bio-pic {
+  #bio-pic, #gallery-img {
     width: 100%;
   }
 }
